--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,180 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/*application page*/
 .App {
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(30deg, rgba(34, 156, 195, 0.7), rgb(45, 105, 253, 0.8));
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/*application division*/
+.main {
+  width: 35%;
+  min-height: 80vh;
+  height: auto;
+  background-color: #f5f5f5;
+  box-shadow: 3px 10px 10px 3px rgba(0, 0, 0, 0.5);
+  border-radius: 15px;
+  padding: 5px;
+  padding-bottom: 10px;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+h1 {
   color: white;
+  background: transparent;
+  background: linear-gradient(30deg, rgb(156, 34, 195, 0.6), rgb(105, 45, 253, 0.7));
+  padding: 4px 0 2px;
+  margin-bottom: 30px;
+  box-shadow: -5px 10px 10px -5px #6989aa;
+  margin-top: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+.reset {
+  min-height: 20px;
+  width: 20%;
+  border-radius: 5px;
+  border-color: transparent;
+  background-color: #f4f4f4;
+  color: #8566aa;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  margin-left: 80px;
+  box-shadow: -5px 10px 10px -5px #6989aa;
+  padding: 5px;
+  margin-bottom: 8px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.reset:hover {
+  font-size: 20px;
+  color: #000;
+}
+
+/*new task*/
+input {
+  text-align: center;
+  height: 30px;
+  top: 10px;
+  border: none;
+  background: transparent;
+  font-size: 22px;
+  font-weight: 500;
+  width: 60%;
+  border-bottom: 2px solid #8566aa;
+  outline: none;
+  margin-bottom: 20px;
+}
+
+.main .addbtn {
+  min-height: 20px;
+  width: 30%;
+  border-radius: 8px;
+  border-color: transparent;
+  background: linear-gradient(20deg, rgb(156, 34, 195, 0.6), rgb(105, 45, 253, 0.7));
+  color: #fff;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  margin-left: 20px;
+  box-shadow: -5px 10px 10px -5px #6989aa;
+  padding: 5px;
+}
+
+.addbtn:hover {
+  font-size: 20px;
+  color: #000;
+}
+
+/*to-do list*/
+.list {
+  list-style: none;
+  border-radius: 10px;
+  box-shadow: -5px 10px 10px -5px #8566aa;
+  width: 90%;
+  text-align: center;
+  font-size: 22px;
+  margin: auto;
+  margin-top: 30px;
+  font-weight: 600;
+}
+
+.list .completebtn {
+  min-height: 18px;
+  width: 20%;
+  border-radius: 5px;
+  border-color: transparent;
+  background: linear-gradient(20deg, rgb(156, 34, 195, 0.6), rgb(105, 45, 253, 0.7));
+  color: #fff;
+  font-size: 16px;
+  border: none;
+  outline: none;
+  margin-left: 26%;
+  box-shadow: -5px 10px 10px -5px #8566aa;
+  padding: 5px;
+  margin-bottom: 1%;
+  margin-top: 1%;
+}
+
+.completebtn:hover {
+  font-size: 18px;
+  color: #000;
+}
+
+.list .deletebtn {
+  min-height: 18px;
+  width: 20%;
+  border-radius: 5px;
+  border-color: transparent;
+  background: linear-gradient(20deg, rgb(156, 34, 195, 0.6), rgb(105, 45, 253, 0.7));
+  color: #fff;
+  font-size: 16px;
+  border: none;
+  outline: none;
+  margin-left: 2%;
+  box-shadow: -5px 10px 10px -5px #8566aa;
+  padding: 5px;
+  margin-bottom: 1%;
+  margin-top: 1%;
+}
+
+.deletebtn:hover {
+  font-size: 18px;
+  color: #000;
+}
+
+/*completed to-do list*/
+.complete {
+  color: #006400;
+}
+
+.delbtn {
+  min-height: 18px;
+  width: 20%;
+  border-radius: 5px;
+  border-color: transparent;
+  background: linear-gradient(20deg, rgb(156, 34, 195, 0.6), rgb(105, 45, 253, 0.7));
+  color: #fff;
+  font-size: 16px;
+  border: none;
+  outline: none;
+  margin-left: 28%;
+  box-shadow: -5px 10px 10px -5px #8566aa;
+  padding: 5px;
+  margin-bottom: 1%;
+  margin-top: 1%;
+}
+
+.delbtn:hover {
+  font-size: 18px;
+  color: #000;
 }
